Release 0.1.9 targeting Java 8.
Rewrite the public model off records and sealed types, compile to
bytecode 52, and document Java 8 runtime support.